# K-Mean-Clustering-Optimization

kmeans_project/: CMakeLists.txt  README.md  kmeans_test
kmeans_project/benchmark/results/: baseline_results.csv  baseline_results.md  benchmark_results.csv  quick_benchmark_output.txt  threads_scaling.csv
kmeans_project/include/: BenchmarkRunner.h  Cluster.h  KMeans.h  KMeansSoA.h  Point.h  Timer.h  Utils.h
kmeans_project/profiling/: profiling_results.csv
kmeans_project/profiling/optimized/: perf_threads1_pts50000_cls10_run0.txt  perf_threads1_pts50000_cls10_run1.txt  perf_threads1_pts50000_cls10_run2.txt  perf_threads2_pts50000_cls10_run0.txt  perf_threads2_pts50000_cls10_run1.txt  perf_threads2_pts50000_cls10_run2.txt  perf_threads4_pts50000_cls10_run0.txt  perf_threads4_pts50000_cls10_run1.txt  perf_threads4_pts50000_cls10_run2.txt  perf_threads8_pts50000_cls10_run0.txt  perf_threads8_pts50000_cls10_run1.txt  perf_threads8_pts50000_cls10_run2.txt
kmeans_project/profiling/soa/: perf_threads1_pts50000_cls10_run0.txt  perf_threads1_pts50000_cls10_run1.txt  perf_threads1_pts50000_cls10_run2.txt  perf_threads2_pts50000_cls10_run0.txt  perf_threads2_pts50000_cls10_run1.txt  perf_threads2_pts50000_cls10_run2.txt  perf_threads4_pts50000_cls10_run0.txt  perf_threads4_pts50000_cls10_run1.txt  perf_threads4_pts50000_cls10_run2.txt  perf_threads8_pts50000_cls10_run0.txt  perf_threads8_pts50000_cls10_run1.txt  perf_threads8_pts50000_cls10_run2.txt
kmeans_project/report/: cache_analysis.csv  comparison_table_presentation.csv  efficiency_results.csv  final_efficiency_summary.csv  final_hardware_summary.csv  final_roofline_summary.csv  final_runtime_summary.csv  final_speedup_summary.csv  ipc_analysis.csv  ipc_results.csv  roofline_metrics.csv  scalability_results.csv  speedup_results.csv
kmeans_project/scripts/: benchmark_baseline.sh  benchmark_quick.sh  generate_scalability_plots.py  profile_runner.sh  threads_scaling.sh
kmeans_project/src/: BenchmarkRunner.cpp  Cluster.cpp  KMeans.cpp  KMeansSoA.cpp  Point.cpp  ProfileRunner.cpp  ProfileRunner.h  ScalabilityRunner.cpp  ScalabilityRunner.h  Timer.cpp  Utils.cpp  main.cpp
(+9 files in other folders)
